added new photo and all modfying form

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../static/style.css" />
-    <title>Please rate your service</title>
+    <title>Tell Your Hobby</title>
   </head>
   <body>
     <div class="container">
@@ -15,25 +15,25 @@
       {% endif %}
       <form action="/submit" method="POST">
         <div class="form-group">
-          <h3>Customer Name</h3>
+          <h3>Your Good Name</h3>
           <input
             type="text"
             name="customer"
-            placeholder="Name of vehicle owner"
+            placeholder="Name of Person"
           />
         </div>
         <div class="form-group">
-          <h3>Dealer</h3>
+          <h3>Favourite Color</h3>
           <select name="dealer">
-            <option value="">Select Dealer</option>
-            <option value="Tom Smith">Tom Smith</option>
-            <option value="Karen Swanson">Karen Swanson</option>
-            <option value="Jim Johnson">Jim Johnson</option>
-            <option value="Shauna Gifford">Shauna Gifford</option>
+            <option value="">Red</option>
+            <option value="Tom Smith">Green</option>
+            <option value="Karen Swanson">Blue</option>
+            <option value="Jim Johnson">Sky Blue</option>
+            <option value="Shauna Gifford">Pink</option>
           </select>
         </div>
         <div class="form-group">
-          <h3>Please rate your dealer</h3>
+          <h3>Please rate your experience</h3>
           <input type="radio" name="rating" value="1" /> 1
           <input type="radio" name="rating" value="2" /> 2
           <input type="radio" name="rating" value="3" /> 3
