--- a/static/style.css
+++ b/static/style.css
@@ -1,71 +1,72 @@
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	background: #f4f4f4;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #333;
-	line-height: 1.6;
+  background: #f4f4f4;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333;
+  line-height: 1.6;
 }
 
 .container {
-	max-width: 650px;
-	margin: 1rem auto;
-	overflow: auto;
-	padding: 0 2rem;
+  max-width: 650px;
+  margin: 1rem auto;
+  overflow: auto;
+  padding: 0 2rem;
 }
 
 h1 {
-	color: #777;
-	margin-top: 15px;
+  color: #777;
+  margin-top: 15px;
 }
 
 h3 {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 img {
-	width: 100%;
+  width: 100%;
 }
 
 .message {
-	text-align: center;
-	padding: 5px;
-	border: #ccc dotted 2px;
-	margin-top: 2rem;
+  text-align: center;
+  padding: 5px;
+  border: #ccc dotted 2px;
+  margin-top: 2rem;
 }
 
 .logo {
-	width: 300px;
-	display: block;
-	margin: auto;
+  width: 300px;
+  display: block;
+  margin: auto;
+  border-radius: 50%;
 }
 
 .form-group {
-	margin: 1rem 0;
+  margin: 1rem 0;
 }
 
-input[type='text'],
+input[type="text"],
 select,
 textarea {
-	display: block;
-	width: 100%;
-	padding: 0.4rem;
-	font-size: 1.2rem;
-	border: 1px solid #ccc;
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
 }
 
 .btn {
-	display: block;
-	width: 100%;
-	background: #333;
-	color: #fff;
-	padding: 10px 20px;
-	border: none;
-	cursor: pointer;
-	outline: none;
-	margin-top: 1rem;
+  display: block;
+  width: 100%;
+  background: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  margin-top: 1rem;
 }
