--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
           <input type="radio" name="rating" value="10" checked /> 10
         </div>
         <div class="form-group">
-          <h3>Comments about your experience</h3>
+          <h3>Tell us about your hobby / experience</h3>
           <textarea
             name="comments"
             id=""
