--- a/templates/index.html
+++ b/templates/index.html
@@ -25,11 +25,11 @@
         <div class="form-group">
           <h3>Favourite Color</h3>
           <select name="dealer">
-            <option value="">Red</option>
-            <option value="Tom Smith">Green</option>
-            <option value="Karen Swanson">Blue</option>
-            <option value="Jim Johnson">Sky Blue</option>
-            <option value="Shauna Gifford">Pink</option>
+            <option value="Red">Red</option>
+            <option value="Green">Green</option>
+            <option value="Blue">Blue</option>
+            <option value="Sky Blue">Sky Blue</option>
+            <option value="Pink">Pink</option>
           </select>
         </div>
         <div class="form-group">
